--- a/frontend/src/components/GameView/index.scss
+++ b/frontend/src/components/GameView/index.scss
@@ -41,6 +41,7 @@
 
         input {
             padding: 5px;
+            height: 2vh;
             border: 1px solid #ccc;
             border-radius: 4px;
             font-size: 14px;
@@ -78,6 +79,7 @@
             background: rgb(241, 236, 227);
             border: none;
             border-radius: 0.5vh;
+            margin-right: 1vw;
         }
 
         button:active {
@@ -729,7 +731,7 @@
     background: rgba(217, 208, 192, 0.624);
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
         rgba(0, 0, 0, 0.23) 0px 3px 6px;
-    margin-top: -11vh;
+    margin-top: -9vh;
     margin-bottom: 1vh;
     margin-left: .5vw;
     height: 15vh;
