--- a/frontend/src/components/DMView/index.scss
+++ b/frontend/src/components/DMView/index.scss
@@ -178,6 +178,18 @@ form {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    display: flex;
+    /* Arrange tokens in a row */
+    flex-wrap: nowrap;
+    /* Prevent wrapping */
+    overflow-x: auto;
+    /* Enable horizontal scrolling */
+    padding: 1vh;
+    /* Add padding */
+    scrollbar-width: thin;
+    /* Make scrollbar thinner for Firefox */
+    -ms-overflow-style: none;
+    /* Hide scrollbar for IE and Edge */
   }
 
   .add-npc {
@@ -238,6 +250,7 @@ form {
   font-size: 1.8vh;
   /* Adjust font size as needed */
   margin-top: 0.5vh;
+  margin-left: .5vw;
   color: #333;
   /* Adjust text color */
 }
@@ -373,6 +386,18 @@ input[name="npc-cha"] {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    display: flex;
+    /* Arrange tokens in a row */
+    flex-wrap: nowrap;
+    /* Prevent wrapping */
+    overflow-x: auto;
+    /* Enable horizontal scrolling */
+    padding: 1vh;
+    /* Add padding */
+    scrollbar-width: thin;
+    /* Make scrollbar thinner for Firefox */
+    -ms-overflow-style: none;
+    /* Hide scrollbar for IE and Edge */
   }
 
   .map-item {
@@ -535,6 +560,7 @@ input[name="npc-cha"] {
 }
 
 .close-map-info {
+  position: absolute;
   height: 4vh;
   width: 4vh;
   font-size: 2.5vh;
@@ -548,7 +574,7 @@ input[name="npc-cha"] {
   cursor: pointer;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   transition: all 0.2s ease-in-out;
-  margin-left: 25vw;
+  margin-left: 40vw;
 
   &:hover {
     background: rgb(190, 170, 142);
